--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 .main-container{
- background-image: url('./media/bg.jpg');
- background-repeat: no-repeat;
- background-size: cover;
+
 }
 
 body {
@@ -11,6 +9,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image: url('./media/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
+  background-position: center top;
   
 }
 
