--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 html{
-
+    background-image: url('./media/bg.jpg');
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+    background-position: center top;
 }
 
 
